<?xml version="1.0"?>
<package>
  <name>ros2_comm</name>
  <version>0.0.0</version>
  <description>The ros2_comm package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="bcharrow@todo.todo">bcharrow</maintainer>

  <license>TODO</license>

  <build_depend>cpp_common</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp_serialization</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>cpp_common</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp_serialization</run_depend>
  <run_depend>message_generation</run_depend>
  <buildtool_depend>catkin</buildtool_depend>

</package>
